--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,254 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* HEADER STYLES */
+.header {
+  display: flex;
+  align-items: center;
+  padding: 0px 5vw 0px 2vw;
+  height: 15vw;
+  min-height: 80px;
+  max-height: 130px;
+  width: 100%;
+  box-shadow: 0px 5px 7px 0px rgba(43, 36, 84, 0.3);
+  background-color: #2b2454;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.nav {
+  margin-left: auto;
+}
+
+.nav > ul {
+  display: flex;
+  list-style: none;
+  gap: 2vw;
+  padding: 0px;
+}
+
+.inactiveNavLink, .activeNavLink {
+  text-decoration: none;
+  color: #74728a;
+  font-size: 1rem;
+  font-weight: 700;
+}
+
+.activeNavLink {
+  color: #C9BEA5;
+}
+
+.logo {
+  text-decoration: none;
+  color: #74728a;
+}
+
+.logo:hover {
+  color: #C9BEA5;
+}
+
+/* PROFILE SECTION STYLES */
+.profile {
+  width: 100%;
+  height: fit-content;
+  padding: 2vw;
+
+  display: grid;
+  grid-template-columns: repeat(1, minmax(180px, 15vw)) repeat(3, 1fr);
+  grid-template-rows: repeat(2, minmax(100px, 5vw)) repeat(2, 1fr);
+  grid-column-gap: 2vw;
+  grid-row-gap: 2vh;
+}
+
+.profile-pic {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  grid-area: 1 / 1 / 3 / 2;
+  align-self: center;
+  justify-self: center;
+}
+
+.info {
+  grid-area: 1 / 2 / 3 / 4;
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+  white-space: nowrap;
+}
+.pos, .age{
+  font-style: italic;
+  font-size: 1rem;
+  letter-spacing: 0.05rem;
+}
+
+.name {
+  font-size: 1.2rem;
+  white-space: nowrap;
+}
+
+.about {
+  grid-area: 3 / 1 / 5 / 5;
+  letter-spacing: 0.03rem;
+}
+
+.about h3 {
+  font-size: 1.5rem;
+  letter-spacing: 0.08rem;
+  margin-bottom: 5px;
+}
+
+.button-wrapper {
+  width: 15vw;
+  height: 5vh;
+  min-width: 100px;
+  max-width: 150px;
+  min-height: 20px;
+  max-height: 30px;
+  grid-area: 1 / 4 / 2 / 5;
+  justify-self: center;
+}
+
+.edit-profile, .save-profile{
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  border-style: none;
+  background-color: #2b2454;
+  color: #74728a;
+  font-size: 100%;
+  font-weight: 600;
+  cursor: pointer;
+  transition: ease-in-out .25s;
+}
+
+.edit-profile:hover {
+  background-color: #171135;
+  color: #C9BEA5;
+}
+
+
+/* EDIT PROFILE PAGE */
+.edit-info {
+  display: flex;
+  flex-direction: column;
+  grid-area: 1 / 2 / 3 / 4;
+  gap: 5px;
+}
+
+.name-input-wrapper {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+  width: 100%;
+}
+
+.firstname-input, .lastname-input {
+  width: 50%;
+}
+
+input, textarea {
+  height: 5vh;
+  border-radius: 10px;
+  border-style: none;
+  padding-left: 10px;
+  background-color: transparent;
+  box-shadow: inset 0px 0px 20px 60px rgba(43, 36, 84, 0.8);
+  color: #C9BEA5;
+  outline: none;
+}
+
+textarea {
+  width: 100%;
+  height: 20vh;
+  font-size: 1rem;
+  box-shadow: inset 0px 0px 50px 130px rgba(43, 36, 84, 0.8);
+}
+
+label {
+  display: none;
+}
+
+.about > label {
+  display: contents;
+}
+
+.save-profile {
+  background-color: #1e702e;
+  color: #C9BEA5;
+}
+
+.save-profile:hover {
+  background-color: #238636;
+  color: #fff;
+}
+
+
+/* PROJECT SECTION STYLES */
+.projects {
+  width: 100vw;
+  height: auto;
+  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  row-gap: 20px;
+}
+
+.project {
+  width: 30vw;
+  height: 35vw;
+  background-color: #2b2454;
+  border-radius: 20px;
+  overflow: hidden;
+  transition: .35s ease-in-out;
+}
+
+.project:hover {
+  background-color: #171135;
+}
+
+.project > img{
+  width: 100%;
+  height: 50%;
+  border-radius: 20px 20px 0px 0px;
+}
+
+.project > h2, p {
+  width: 100%;
+  margin: 5px 0px;
+}
+
+
+
+/* MEDIA SECTION */
+@media only screen and (max-width: 1000px) {
+  .project {
+    width: 80vw;
+    max-width: 320px;
+    height: 50vh;
   }
-  to {
-    transform: rotate(360deg);
+  .projects {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .profile {
+    display: flex;
+    flex-direction: column;
+  }
+  .profile-pic {
+    width: 150px;
+    height: 150px;
+  }
+  .info {
+    text-align: center;
+  }
+  .button-wrapper {
+    width: 100%;
+    align-self: center;
   }
 }
